# ChangeLog for app-arch/lha
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/lha/ChangeLog,v 1.46 2007/12/17 16:47:28 armin76 Exp $

  17 Dec 2007; Raúl Porcel <armin76@gentoo.org> -lha-114i-r6.ebuild:
  old

  13 Nov 2007; Jeroen Roovers <jer@gentoo.org> lha-114i-r7.ebuild:
  Stable for HPPA (bug #198596).

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> lha-114i-r7.ebuild:
  Stable on ppc64; bug #198596

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> lha-114i-r7.ebuild:
  Stable on amd64 wrt #198596.

  09 Nov 2007; nixnut <nixnut@gentoo.org> lha-114i-r7.ebuild:
  Stable on ppc wrt bug 198596

  09 Nov 2007; Fabian Groffen <grobian@gentoo.org> lha-114i-r6.ebuild,
  lha-114i-r7.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  09 Nov 2007; Raúl Porcel <armin76@gentoo.org> lha-114i-r7.ebuild:
  alpha/ia64/sparc/x86 stable

*lha-114i-r7 (22 Jul 2007)

  22 Jul 2007; Samuli Suominen <drac@gentoo.org>
  +files/lha-114i-file-list-from-stdin.patch, +lha-114i-r7.ebuild:
  Enable feature which was disabled because of Cygwin/MinGW, bug 184911.

  06 Nov 2006; MATSUU Takuto <matsuu@gentoo.org>
  -files/lha-114i-build.patch,
  -files/lha-114i-detect-cmd-extract-fail.patch,
  -files/lha-114i-dir_length_bounds_check.patch,
  -files/lha-114i-malloc.patch, -files/lha-114i-sec.patch,
  -files/lha-114i-sec2.patch, -files/lha-114i-symlink.patch,
  -lha-114i-r5.ebuild:
  Removed old version.

  05 Nov 2006; René Nussbaumer <killerfox@gentoo.org> lha-114i-r6.ebuild:
  Stable on hppa. See bug #151252.

  05 Nov 2006; Brent Baude <ranger@gentoo.org> lha-114i-r6.ebuild:
  Marking lha-114i-r6 ppc64 stable for bug #151252

  04 Nov 2006; Jose Luis Rivero <yoswink@gentoo.org> lha-114i-r6.ebuild:
  Stable on alpha wrt security bug #151252

  04 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org> lha-114i-r6.ebuild:
  ppc stable, bug #151252

  03 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> lha-114i-r6.ebuild: