@@ -1,5 +1,5 @@
 AUX lha-114i-file-list-from-stdin.patch 991 RMD160 6a7dfece767cfa8f3dabfddb06f591450c560c06 SHA1 a4936b46747f91916c7eb7e64fe6be7ea5c4420d SHA256 f54adeb588365f50ec81b590254260254e58100a936e0a096c5f25964f9afd8d
 DIST lha-1.14i-ac20050924p1.tar.gz 285518 RMD160 7603dc93d8afdeed6cfbaa193f68ae4283bea39b SHA1 2491c8b584c21759f1d3819f57fa0e1cbc235092 SHA256 b5261e9f98538816aa9e64791f23cb83f1632ecda61f02e54b6749e9ca5e9ee4
 EBUILD lha-114i-r7.ebuild 832 RMD160 d62b8fcf056e76fe7b9c3b6509158589d913750f SHA1 aa977263e0a99609b91a8b696fd239e31019600b SHA256 0a96addbc8a89e9193bdef69829103e5ab6e0ead33f3617b83c1d506db70e679
-MISC ChangeLog 6039 RMD160 faa9e1a7ac979d517355c45f40f650e71277e2f4 SHA1 22a8d189d9a9b6dc65af1d9cee12295df973034f SHA256 d79bf2d7de7c76b01644f17ef0e64549cc3a876fd45b5e81f10602b0131ebe1a
-MISC metadata.xml 305 RMD160 5b5ca96f26991316b57bd45d83b9bad826021553 SHA1 06aad2805a4e027b6c1c7223d17206a24ec86478 SHA256 f4fec485b792dcd3e6b24220e008c488169c341582a79d4f921a6c5b78a21452
+MISC ChangeLog 6185 RMD160 eaa5830e9e5fce86bd049bf3cc88bcc98f718d49 SHA1 b1f75adf442d82eac09087df7fd758b41e49caec SHA256 2ec5d2e7885758b1a0ee924ae605fcd5f3d7e6bd21da3ecf861b7585f7d15c32
+MISC metadata.xml 336 RMD160 156de80a22bdf15b905ce9788836bf70904d0630 SHA1 ee76d2f07396af408a30300c567003e4370df20f SHA256 4087cdfca8e31942ea01305b0bf7deee6dc35a2655ec0ef1d36c772cccc4194b
