@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/lha
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/lha/ChangeLog,v 1.46 2007/12/17 16:47:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/lha/ChangeLog,v 1.47 2007/12/25 16:36:01 phreak Exp $
+
+  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Removing usata from metadata.xml as per #22931. Assigning to maintainer-needed.
 
   17 Dec 2007; Raúl Porcel <armin76@gentoo.org> -lha-114i-r6.ebuild:
   old
